--- a/Substation Builder/Pages/DatabaseView/BreakerPage.xaml
+++ b/Substation Builder/Pages/DatabaseView/BreakerPage.xaml
@@ -102,5 +102,13 @@
             <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:BrkManufacture}}}" SelectedValue="{Binding BrkMan}"/>
         </DockPanel>
 
+        <DockPanel>
+            <Label Content="Position:"/>
+            <Label Content="X:" Width="25" Margin="0,0,5,5"/>
+            <TextBox Text="{Binding X, UpdateSourceTrigger=PropertyChanged}" Width="50"/>
+            <Label Content="Y:" Width="25" Margin="0,0,5,5"/>
+            <TextBox Text="{Binding Y, UpdateSourceTrigger=PropertyChanged}" Width="50"/>
+        </DockPanel>
+
     </StackPanel>
 </UserControl>
